docs(i18n ar): add i18n ar, part of vi, improve animation

--- a/src/i18n/locales/ar/crudeOil.json
+++ b/src/i18n/locales/ar/crudeOil.json
@@ -1,36 +1,36 @@
 {
-  "crudeOil": "Crude Oil",
-  "crudeOilIsNotOnly": "Crude oil is not only a highly sought-after commodity in the world, but also a must for economic activities in energy supply, industrial, and transportation use.",
-  "viewTradingProducts": "View Trading Products",
-  "howToTradeCommodities": "How to trade commodities",
-  "crudeOilAndNaturalGas": "Crude oil and natural gas are the most popular commodities. They generate huge trading volume at all times, providing online traders with numerous trading opportunities. Whether it is US crude oil (WTI), Brent crude oil (BRENT) or natural gas (NATGAS), energy commodities are quoted in US dollars.",
-  "whenYouAreTradingEnergy": "When you are trading energy CFDs, the exchange rate with the u.s dollar is a key factor to keep an eye on. Our bulk commodities offer both \"buy\" and \"sell\" prices. The difference between the buying price and the selling price is called \"spread\".",
-  "supposeYouThinkThat": "Suppose you think that the price of WTI crude oil will rise, so you buy 1 lot of WTI at a price of $54.17. This means that when the market moves in the direction you expect, for every 0.01 change in the price, your profit is $1.",
-  "basicKnowledgeOfCrudeOil": "Basic knowledge of crude oil",
-  "crudeOilIsUsedInManufacturing": "Crude oil is used in manufacturing, transportation and energy production. Its supply is variable and its storage capacity is limited, which has a huge impact on the global economy. Crude oil is very popular among traders. Its supply and demand are constantly changing, so there will always be price fluctuations and high liquidity.",
-  "youDoNotNeedTo": "You do not need to deal with large amounts of crude oil to conduct oil market transactions. Because most oil and gas transactions are realized through futures.",
-  "typesOfCrudeOilTransactions": "Types of crude oil transactions",
-  "likeStocks": "Like stocks, crude oil is also traded on exchanges. But unlike stocks, they are traded on the basis of crude oil. The forms of crude oil mined all over the world are not exactly the same. Through crude oil benchmarks, traders can quickly identify the quality of the oil they buy and the location of the drilling. The crude oil spot price represents the cost of buying or selling crude oil and delivering it immediately or on the spot (rather than delivering it on a set date in the future). Therefore, the futures price reflects the market's belief that the value of crude oil when it expires in the future, and the spot price reflects the current value of crude oil.",
-  "WTI": "West Texas Intermediate (WTI)",
-  "thisIsACrudeOilProduced": "This is a crude oil produced in the United States, also known as Texas Light Sweet Crude Oil. The so-called \"light\" means that it is less dense than most OPEC crude oils, while \"sweet\" means that it has a lower sulfur content.",
-  "BRENT": "Brent Crude Oil (BRENT)",
-  "brentCrudeOil": "Brent Crude Oil (BRENT), referred to as \"Brent\", is a kind of crude oil produced in the North Sea. Brent crude oil is also described as \"light sweet crude\", just like WTI.",
-  "majorAffectingCrudeOilPriceFactors": "Major affecting crude oil price factors",
-  "crudeOilIsOneOfTheMostTraded": "Crude oil is one of the most traded commodities in the world, and the crude oil market is undergoing new changes every day",
-  "extractionAndRefining": "Extraction and refining",
-  "crudeOilExtractionAndRefining": "Crude oil extraction and refining processes are expensive. Because oil reserves are located deep underground, extracting crude oil from underground requires a relatively huge price.",
-  "anyTechnologicalProgress": "Any technological progress or setbacks in the mining process have a direct impact on crude oil prices.",
-  "consumptionAndDemand": "Consumption and demand",
-  "theLargestConsumer": "The largest consumer of and demand for crude oil is the United States, followed by Japan, China, and European industrial countries such as Germany and the United Kingdom.",
-  "theIndustrialAndEconomicSectors": "The industrial and economic sectors of these countries have great demand for crude oil. Therefore, their demand will affect the global crude oil price.",
-  "availabilityAndSupply": "Availability and supply",
-  "noMatterHowTheSupplyChanges": "No matter how the supply changes, the availability of crude oil will be affected by political and economic factors. Rising inflation, unemployment and poverty rates may lead to a decline in consumption levels, making it impossible for those affected to afford certain products. Political unrest and rebellion may also lead to a reduction in crude oil imports and the smuggling of imported commodities.",
-  "naturalDisastersAndAccidents": "Natural disasters and accidents",
-  "naturalDisastersSuchAs": "Natural disasters such as earthquakes and hurricanes are unpredictable events. The losses to drilling sites and refineries caused by these disasters may hinder and delay crude oil production.",
-  "firesAndMechanicalFailures": "Fires and mechanical failures can also cause delays in production due to the need for time to recover. Delays caused by these environmental factors will reduce the supply of crude oil, leading to price increases.",
-  "youNeedToBeFamiliarWith": "You need to be familiar with and regularly review two crude oil reports",
-  "USDepartmentOfEnergy": "US Department of Energy's crude oil inventory report",
-  "theUSDepartmentOfEnergy": "The US Department of Energy's crude oil inventory report released every Wednesday. The report reflects the inventory of US crude oil. Since the United States is the largest consumer of crude oil, it is necessary for traders to analyze their demand by regularly understanding crude oil inventory.",
-  "OPEC": "OPEC Crude Oil Market Report",
-  "theCrudeOilReportYouShouldStudy": "The crude oil report you should study is the monthly and annual reports issued by OPEC. These reports provide a way for you to understand the production goals of OPEC member countries. Their production targets and quotas reflect the current level of crude oil supply and demand in the world market."
+  "crudeOil": "النفط الخام",
+  "crudeOilIsNotOnly": "إن النفط الخام ليس مجرد سلعة مرغوبة للغاية في العالم فقط، ولكنه أيضًا ضروري للأنشطة الاقتصادية في إمدادات الطاقة والاستخدام الصناعي والنقل.",
+  "viewTradingProducts": "عرض منتجات التداول",
+  "howToTradeCommodities": "كيفية تداول السلع",
+  "crudeOilAndNaturalGas": "النفط الخام والغاز الطبيعي هما أكثر السلع شعبية. إنهم يولدون حجم تداول ضخم في جميع الأوقات، مما يوفرللمتداولين عبر الإنترنت العديد من فرص التداول. سواء كان النفط الخام الأمريكي (WTI) أو نفط خامبرنت (BRENT) أو الغاز الطبيعي (NATGAS)، يتم تسعير سلع الطاقة بالدولار الأمريكي.",
+  "whenYouAreTradingEnergy": "عند قيامك بتداول عقود فروقات الطاقة، فإن سعر الصرف مع الدولار الأمريكي هو عامل رئيسي يجب مراقبته. حيث تمتلك معظم السلع لدينا أسعار \"شراء\" و \"بيع\". الفرق بين سعر الشراء وسعر البيع يسمى \"السبريد\".",
+  "supposeYouThinkThat": "لنفترض أنك تعتقد أن سعر خام غرب تكساس الوسيط سيرتفع، لذا فإنك تشتري عقدًا واحدًا من خام غرب تكساس الوسيط بسعر 54.17 دولارًا. هذا يعني أنه عندما يتحرك السوق في الاتجاه الذي تتوقعه، فكل 0.01 تغيير في السعر، يكون ربحك 1 دولار.",
+  "basicKnowledgeOfCrudeOil": "المعرفة الأساسية بالنفط الخام",
+  "crudeOilIsUsedInManufacturing": "يتم استخدام النفط الخام في التصنيع والنقل وإنتاج الطاقة. إن المعروض من النفط الخام متغير والقدرة التخزينية له محدودة، مما يؤثر بشكل كبير على الاقتصاد العالمي. يحظى النفط الخام بشعبية كبيرة بين المتداولين. حيث يتغير العرض والطلب بشكل مستمر، لذلك ستكون هناك تقلبات في الأسعار وسيولة عالية دائمًا.",
+  "youDoNotNeedTo": "انك لا تحتاج إلى التعامل مع كميات كبيرة من النفط الخام لإجراء معاملات سوق النفط. لأن معظم معاملات النفط والغاز تتحقق من خلال العقود الآجلة.",
+  "typesOfCrudeOilTransactions": "أنواع معاملات النفط الخام",
+  "likeStocks": "يتم تداول النفط الخام أيضًا في البورصات مثل الأسهم. ولكن على عكس الأسهم، يتم التداول على أساس النفط الخام. إن أشكال النفط الخام المستخرج من جميع أنحاء العالم ليست متماثلة تمامًا. من خلال معايير النفط الخام، يمكن للمتداولين التعرف بسرعة على جودة النفط الذي يشترونه وموقع الحفر. يمثل السعر الفوري للنفط الخام تكلفة شراء أو بيع النفط الخام وتسليمه على الفور (بدلاً من تسليمه في تاريخ محدد في المستقبل). لذلك، فإن سعر العقود الآجلة يعكس تقدير السوق لقيمة النفط الخام عند انتهاء صلاحيته في المستقبل، وأن السعر الفوري يعكس القيمة الحالية للنفط الخام.",
+  "WTI": "غرب تكساس الوسيط ​​(WTI)",
+  "thisIsACrudeOilProduced": "إن هذا هو النفط الخام الذي يتم انتاجه في الولايات المتحدة، والمعروف أيضًا باسم زيت خام تكساس الحلو الخفيف. وتعني كلمة \"خفيف\" أنه أقل كثافة من معظم أنواع نفط أوبك الخام، بينما تعني كلمة \"حلو\" أنه يحتوي على نسبة أقل من الكبريت.",
+  "BRENT": "نفط خام برنت (BRENT)",
+  "brentCrudeOil": "إن نفط خام برنت والذي يشار إليه باسم \"BRENT\" هو نوع من النفط الخام يتم انتاجه في بحر الشمال. يوصف نفط خام برنت أيضًا بأنه \"خام خفيف حلو\" ، تمامًا مثل خام غرب تكساس الوسيط.",
+  "majorAffectingCrudeOilPriceFactors": "العوامل الرئيسية التي تؤثر على أسعار النفط الخام",
+  "crudeOilIsOneOfTheMostTraded": "يعتبر النفط الخام من أكثر السلع تداولاً في العالم، ويمر سوق النفط الخام بتغيرات جديدة كل يوم",
+  "extractionAndRefining": "الاستخراج والتكرير",
+  "crudeOilExtractionAndRefining": "إن عمليات إستخراج النفط الخام وتكريرهُ مكلفة. ونظراً لوجود احتياطيات النفط في أعماق الأرض، فإن استخراج النفط الخام من باطن الأرض يتطلب سعراً باهظاً نسبياً.",
+  "anyTechnologicalProgress": "أي تقدم تكنولوجي أو انتكاسات في عملية التعدين لها تأثير مباشر على أسعار النفط الخام.",
+  "consumptionAndDemand": "الاستهلاك والطلب",
+  "theLargestConsumer": "إن الولايات المتحدة هي أكبر مستهلك وصاحبة أكبر طلب للنفط الخام، تليها اليابان والصين والدول الصناعية الأوروبية مثل ألمانيا ",
+  "theIndustrialAndEconomicSectors": "والمملكة المتحدة. القطاعات الصناعية والاقتصادية في هذه البلدان لديها طلب كبير على النفط الخام. لذلك، سوف يؤثر طلبهم على سعر النفط الخام العالمي.",
+  "availabilityAndSupply": "الوفرة والعرض",
+  "noMatterHowTheSupplyChanges": "إن توافر النفط الخام سيتأثر بالعوامل السياسية والاقتصادية، بغض النظر عن كيفية تغير العرض. قد يؤدي ارتفاع معدلات التضخم والبطالة والفقر إلى انخفاض مستويات الاستهلاك، مما يجعل من المستحيل على المتضررين شراء منتجات معينة. قد تؤدي الاضطرابات السياسية والتمرد أيضًا إلى انخفاض واردات النفط الخام وتهريب السلع المستوردة.",
+  "naturalDisastersAndAccidents": "الكوارث الطبيعية والحوادث",
+  "naturalDisastersSuchAs": "الكوارث الطبيعية مثل الزلازل والأعاصير هي أحداث لا يمكن التنبؤ بها. قد تؤدي الخسائر التي لحقت بمواقع الحفر والمصافي بسبب هذه",
+  "firesAndMechanicalFailures": "الكوارث إلى إعاقة وتأخير إنتاج النفط الخام. يمكن أن تتسبب الحرائق والأعطال الميكانيكية أيضًا في تأخير الإنتاج بسبب الحاجة إلى وقت للتعافي. ستؤدي التأخيرات الناجمة عن هذه العوامل البيئية إلى تقليل المعروض من النفط الخام، مما يؤدي إلى ارتفاع الأسعار.",
+  "youNeedToBeFamiliarWith": "يجب أن تكون على دراية بتقريران مهمين للنفط الخام ومراجعتهما بانتظام",
+  "USDepartmentOfEnergy": "تقرير مخزون النفط الخام لوزارة الطاقة الأمريكية",
+  "theUSDepartmentOfEnergy": "يتم اصدار تقرير مخزون النفط الخام لوزارة الطاقة الأمريكية كل يوم أربعاء. يعكس هذا التقرير مخزون النفط الخام الأمريكي. نظرًا لأن الولايات المتحدة هي أكبر مستهلك للنفط الخام، فمن الضروري للمتداولين تحليل طلبهم من خلال فهم مخزون النفط الخام بانتظام.",
+  "OPEC": "تقرير أوبك عن سوق النفط الخام",
+  "theCrudeOilReportYouShouldStudy": "إن تقرير النفط الخام الذي يجب دراسته هو من التقارير الشهرية والسنوية الصادرة عن منظمة أوبك. توفر لك هذه التقارير طريقة لفهم أهداف الإنتاج للدول الأعضاء في منظمة أوبك. إن أهداف وحصص إنتاج هذه الدول تعكس المستوى الحالي للعرض والطلب على النفط الخام في السوق العالمية."
 }
