--- a/src/i18n/locales/ar/cryptocurrencies.json
+++ b/src/i18n/locales/ar/cryptocurrencies.json
@@ -1,32 +1,32 @@
 {
-  "cryptoCurrency": "Crypto currency",
-  "bitcoinIsAGameChanging": "Bitcoin is a game-changing digital asset that has been a hot topic around the world.It is by far the most popular virtual currency, and its market share accounts for more than one-third of the total virtual currency market.Since its launch in 2009, Bitcoin has recorded dramatic growth.Not only has its price surged within a few weeks or months, there are more than 16 million coins in circulation, greatly increasing its liquidity.",
-  "viewTradingProducts": "View Trading Products",
-  "bitcoinCanBe": "Bitcoin can be regarded as the most successful cryptocurrency, because it has a huge popularity among traders and investors,and its huge price volatility provides attractive entry and exit points.",
-  "advantagesOfCryptoCurrency": "Advantages of crypto currency",
-  "inViewOfBitcoinsRole": "In view of Bitcoin's role in hedging risks, this crypto currency is likely to be called the “new gold”. In addition to the development of blockchain technology, the investment and trading of crypto currencies such as Bitcoin, Ethereum, and Litecoin have gradually become popular in the financial market. The substantial price fluctuations of crypto currencies give investors the opportunity to quickly capture potential profits.",
-  "theCFDSystem": "The CFD system",
-  "asAGlobalCurrency": "As a global currency, Bitcoin does not affected by changes in any country's monetary policy, economic indicators or geopolitical difficulties. Through WCG's trading platform, you can use CFD (Contracts For Difference) to participate in crypto currency investment with margin without investing all your funds. Opening a real or demo account now and try out our most advanced and efficient trading system.",
-  "howToTradeCryptoCurrency": "How to trade crypto currency",
-  "cryptoCurrencyTransactions": "Crypto currency transactions are very similar to foreign exchange transactions in many aspects. Our crypto currencies are quoted in US dollars or Euros, and you can change their prices against the quote currency of your choice at anytime.",
-  "ifYouSpeculate": "If you speculate that Bitcoin will appreciate against the u.s dollar, you can buy the BTC/USD product. After buying, if the price moves in a direction that is beneficial to you, you can make a profit; if the price moves in a direction that is not favor for you, you will lose money.",
-  "basicConceptsOfCryptoCurrency": "Basic concepts of crypto currency",
-  "cryptoCurrencyIsACurrency": "Crypto currency is a currency that only exists on the Internet. Unlike ordinary fiat currencies, it is not issued by the government or central bank. Since the price of Bitcoin exceeded $7,000, it has become one of the focuses of the financial market. Bitcoin is the first crypto currency, and there are more than 1,000 other crypto currencies worldwide.",
-  "bitcoinAndManyOther": "Bitcoin and many other digital currencies, including Litecoin and Ethereum, are produced through \"mining\"; and other digital currencies, including Ripple and NEO, is directly supplied by the market.",
-  "understandBitcoin": "Understand Bitcoin",
-  "bitcoinWasFounded": "Bitcoin was founded in 2009 by a person or a group of people with the pseudonym Satoshi Nakamoto, and its goal is to establish a decentralized payment system. This innovative idea is based on a technology called blockchain, which can be understood as a public database for storing and recording all bitcoin transactions. The reason why Bitcoin can complete transactions without a bank is because blockchain technology allows everyone to see and verify digital currency transactions.",
-  "limitedSupply": "Limited supply",
-  "SatoshiNakamoto": "Satoshi Nakamoto limited its supply to 21 million when designing Bitcoin. This is very important for measuring the value of an asset, because it means that no bank can put more bitcoin into the market. Therefore, bitcoin is often seen as an anti-inflation product comparable to gold.",
-  "itCanBeObtainedThroughMining": "It can be obtained through mining",
-  "theSoCalledMining": "The so-called mining is the use of computer algorithms to solve complex mathematical problems to ensure the consistency of the Bitcoin network's decentralized accounting system. The network is set to get a qualified answer about every ten minutes, and then the bitcoin network will generate a certain amount of bitcoin as a block reward, and reward those who get the answer, that is, receive bitcoin.",
-  "fastTransactions": "Fast transactions",
-  "theAverageVerificationTime": "The average verification time for bitcoin transactions is ten minutes, which means you can send bitcoin to any place in the world within ten minutes, even on weekends. Although it may sound incredible, with the emergence of more new digital currencies that focus on transaction speed, Bitcoin is no longer the fastest payment method.",
-  "BitcoinsHistoricalPrice": "Bitcoin's historical price",
-  "comparedWithTraditionalCurrencies": "Compared with traditional currencies, crypto currencies are very volatile. The weekly volatility of traditional currencies is usually less than 1%, while Bitcoin was 60% in 2017. Some other crypto currencies have even greater volatility. Although some people think that the price of crypto currencies is full of bubbles, their volatility level undoubtedly provides many trading opportunities for day traders.",
-  "fromThePerspectiveOfVolatility": "From the perspective of volatility, there have been several significant price changes of Bitcoin since 2013.",
-  "HighPointInTheSpring": "High point in the spring of 2013: The first burst of Bitcoin price occurred from March to April 2013, when its price soared from $30 to $230. One possible reason for this rise is that the banking industry in Cyprus is dangerous. At that time, large deposits exceeding a certain amount may be directly confiscated by the bank, and Bitcoin is completely immune to such incidents.",
-  "riseInNovember": "Rise in November 2013: Due to increased demand from China and the US Senate’s interest in Bitcoin, the price of Bitcoin rose to $1,000.",
-  "lowPointInJanuary": "Low point in January 2015: Due to the restrictions of the Chinese government and the arrest of the founder of Silk Road, an online drug trading platform, the price of Bitcoin dropped sharply.",
-  "highPoint": "2017 high point: The price of Bitcoin broke above $10,000.",
-  "highestPointSoFar": "Highest point so far: $63,000"
+  "cryptoCurrency": "العملات المشفرة",
+  "bitcoinIsAGameChanging": "إن البيتكوين (Bitcoin) هو أصل رقمي يغير قواعد اللعبة وقد كان موضوعًا ساخناً حول العالم.يعتبر البيتكوين إلى حد بعيد العملة الافتراضية الأكثر شعبية، وتمثل حصتها في السوق أكثر من ثلث إجمالي سوق العملات الافتراضية.لقد سجلت البيتكوين نموًا كبيرًا منذ إطلاقها في عام 2009. لم يرتفع سعرها في غضون أسابيع أو أشهر قليلة فحسب، بل أصبح هناك أكثر من 16 مليون قطعة نقدية متداولة، مما يزيد من السيولة بشكل كبير.",
+  "viewTradingProducts": "عرض منتجات التداول",
+  "bitcoinCanBe": "يمكن اعتبار Bitcoin أكثر العملات المشفرة نجاحًا ، لأنها تحظى بشعبية كبيرة بين المتداولين والمستثمرين ، كما أن تقلب أسعارها الهائل يوفر نقاط دخول وخروج جذابة.",
+  "advantagesOfCryptoCurrency": "مزايا العملات المشفرة",
+  "inViewOfBitcoinsRole": "نظراً لدور البيتكوين في التحوط من المخاطر، فمن المحتمل أن يطلق على هذه العملة المشفرة \"الذهب الجديد\". هذا بالإضافة إلى تطوير تقنية سلسلة الكتل \"البلوك تشين\" ، لقد أصبح استثمار وتداول العملات المشفرة مثل البيتكوين و الإثيريوم و لايتكوين شائعًا بشكل تدريجي في السوق المالية. إن التقلبات الكبيرة في أسعار العملات المشفرة تتيح للمستثمرين الفرصة لجني الأرباح المحتملة بسرعة.",
+  "theCFDSystem": "نظام العقود مقابل الفروقات CFD",
+  "asAGlobalCurrency": "لإن البيتكوين عملة عالمية، فهي لا تتأثر بالتغيرات في السياسة النقدية لأي بلد أو المؤشرات الاقتصادية أو الصعوبات الجغرافية و الجيوسياسية. من خلال منصة تداول WCG، يمكنك استخدام CFD (عقود الفروقات) للمشاركة في استثمار العملات المشفرة بهامش دون استثمار جميع أموالك. قم بفتح حساب حقيقي أو تجريبي الآن وجرب نظام التداول الأكثر تقدمًا وفعالية لدينا.",
+  "howToTradeCryptoCurrency": "كيفية تداول العملات المشفرة",
+  "cryptoCurrencyTransactions": "إن معاملات العملات المشفرة تشبه إلى حد كبير تداول الفوركس في العديد من الجوانب. إن العملات المشفرة لدينا يتم تسعيرها بالدولار الأمريكي أو اليورو، ويمكنك تغيير أسعارها مقابل عملة التسعير التي تختارها في أي وقت.",
+  "ifYouSpeculate": "إذا كنت تتوقع ارتفاع قيمة البيتكوين مقابل الدولار الأمريكي، يمكنك شراء منتج BTC/USD. إذا تحرك السعر في إتجاه مفيد لك بعد الشراء، يمكنك تحقيق ربح، أما إذا تحرك السعر في إتجاه لا يناسبك، فسوف تخسر المال.",
+  "basicConceptsOfCryptoCurrency": "المفاهيم الأساسية للعملات المشفرة",
+  "cryptoCurrencyIsACurrency": "العملة المشفرة هي عملة موجودة فقط على الإنترنت. على عكس العملات الورقية العادية ، لا يتم إصدارها من قبل الحكومة أو البنك المركزي. نظرًا لأن سعر Bitcoin تجاوز 7000 دولار ، فقد أصبح أحد محاور السوق المالية. Bitcoin هي أول عملة مشفرة ، وهناك أكثر من 1000 عملة تشفير أخرى في جميع أنحاء العالم.",
+  "bitcoinAndManyOther": "يتم إنتاج البيتكوين والعديد من العملات الرقمية الأخرى ، بما في ذلك Litecoin و Ethereum ، من خلال \"التعدين\" ويتم توفير العملات الرقمية الأخرى ، بما في ذلك Ripple و NEO ، مباشرة من السوق.",
+  "understandBitcoin": "ما هي عملة البيتكوين",
+  "bitcoinWasFounded": "تأسست البيتكوين في عام 2009 من قبل شخص أو مجموعة من الأشخاص بالاسم المستعار ساتوشي ناكاموتو ، والهدف منها هو إنشاء نظام دفع لامركزي. تعتمد هذه الفكرة المبتكرة على تقنية تسمى سلسلة الكتل ( blockchain )، والتي يمكن فهمها على أنها قاعدة بيانات عامة لتخزين وتسجيل جميع معاملات البيتكوين. إن السبب وراء قدرة البيتكوين على إكمال المعاملات بدون بنك هو أن تقنية سلسة الكتل حيث تسمح للجميع برؤية المعاملات الرقمية للعملة والتحقق منها.",
+  "limitedSupply": "العرض محدود",
+  "SatoshiNakamoto": "عند تصميم البيتكوين وضع ساتوشي ناكاموتو حد لعرض العملة إلى 21 مليون. هذا مهم جدًا لقياس قيمة الأصل، لأنه يعني أنه لا يمكن لأي بنك أن يضع المزيد من البيتكوين في السوق. لذلك، غالبًا ما يُنظر إلى البيتكوين على أنه منتج مضاد للتضخم يمكن مقارنته بالذهب.",
+  "itCanBeObtainedThroughMining": "يمكن الحصول عليها من خلال التعدين",
+  "theSoCalledMining": "ما يسمى بعملية التعدين هو استخدام خوارزميات الكمبيوتر لحل المشكلات الرياضية المعقدة لضمان اتساق نظام المحاسبة اللامركزي لشبكة البيتكوين. تم تعيين الشبكة للحصول على إجابة مؤهلة كل عشر دقائق تقريبًا ، ومن ثم ستنتج شبكة البيتكوين قدرًا معينًا من البيتكوين كمكافأة جماعية، وتكافئ أولئك الذين يحصلون على الإجابة بتلقي البيتكوين.",
+  "fastTransactions": "معاملات سريعة",
+  "theAverageVerificationTime": "إن متوسط ​​وقت التحقق من معاملات البيتكوين هو عشر دقائق، مما يعني أنه يمكنك إرسال البيتكوين إلى أي مكان في العالم في غضون عشر دقائق، حتى في عطلات نهاية الأسبوع. على الرغم من أن ذلك قد يبدو مذهلاً، إلا أنه مع ظهور المزيد من العملات الرقمية الجديدة التي تركز على سرعة المعاملات، لم تعد البيتكوين هي أسرع طريقة دفع.",
+  "BitcoinsHistoricalPrice": "السعر التاريخي",
+  "comparedWithTraditionalCurrencies": "إن العملات المشفرة متقلبة للغاية بالمقارنة مع العملات التقليدية. عادة ما يكون التقلب الأسبوعي للعملات التقليدية أقل من 1٪ ، بينما كان التقلب في عملة البيتكوين 60٪ في عام 2017. بعض العملات المشفرة الأخرى لديها تقلبات أكبر. على الرغم من أن بعض الناس يعتقدون أن سعر العملات المشفرة مليء بالفقاعات، إلا أن مستوى تقلبها يوفر العديد من فرص التداول للمتداولين خلال اليوم بلا شك.",
+  "fromThePerspectiveOfVolatility": "من منظور التقلبات ، كان هناك العديد من التغييرات الكبيرة في أسعار البيتكوين منذ عام 2013.",
+  "HighPointInTheSpring": "أعلى نقطة في ربيع 2013: حدث الاندفاع الأول لسعر البيتكوين من مارس إلى أبريل 2013 ، عندما ارتفع سعره من 30 دولارًا إلى 230 دولارًا. أحد الأسباب المحتملة لهذا الارتفاع هو أن الصناعة المصرفية في قبرص خطيرة. في ذلك الوقت ، قد يصادر البنك الودائع الكبيرة التي تتجاوز مبلغًا معينًا ، وتكون Bitcoin محصنة تمامًا ضد مثل هذه الحوادث.",
+  "riseInNovember": "الارتفاع في نوفمبر 2013: بسبب زيادة الطلب من الصين واهتمام مجلس الشيوخ الأمريكي بعملة البيتكوين ، ارتفع سعر البيتكوين إلى 1000 دولار.",
+  "lowPointInJanuary": "نقطة منخفضة في يناير 2015: بسبب القيود التي فرضتها الحكومة الصينية واعتقال مؤسس طريق الحرير ، وهي منصة تداول مخدرات عبر الإنترنت ، انخفض سعر البيتكوين بشكل حاد.",
+  "highPoint": "أعلى نقطة في عام 2017: تجاوز سعر البيتكوين 10000 دولار.",
+  "highestPointSoFar": "أعلى نقطة حتى الآن: 63000 دولار"
 }
