--- a/src/i18n/locales/ar/notice.json
+++ b/src/i18n/locales/ar/notice.json
@@ -1,32 +1,32 @@
 {
-  "abnormalTrade": "Abnormal Trade",
-  "whatIsAbnormalTrade": "What Is Abnormal Trade?",
-  "abnormalTradeMeans": "Abnormal trade means that customers conduct intensive transactions in a very short period of time. To sum up the experience in the industry, short-term trading is not beneficial to the customer since the customer has to pay a huge amount of handling fees for frequent transactions. At the same time, short-term trading is also an inappropriate investment method, and customers cannot obtain large profits in these frequent transactions. In addition, there are also criminals who intend to use abnormal trades for money laundering purposes. We are particularly concerned about these illegal activities. Any chance to violate the \"anti-money laundering\" regulation of abnormal trades, the company will not tolerate!",
-  "abnormalTradeTakesUp": "Abnormal trade takes up a lot of network resources. Moreover, it will affect the stability and efficiency of the trading system, it will affect the trading of ordinary customers. In order to protect the interests of the majority of customers, the company must not accept abnormal trades.",
-  "theDefinitionOfAbnormalTrades": "The Definition of Abnormal Trades",
-  "whenTheCustomerWithdrawsMoney": "When the customer withdraws money, we will review the customer's log of transactions from the last withdrawal (the first withdrawal starts from the account opening) until this time. According to the transaction volume, when 50% of trading volume in the trading order has a holding time of less than 5 minutes, we will conduct further review of this account, and the review time might last for 3 hours.",
-  "whenThereIs": "When there is a 30% of trading volume's holding time is less than 5 minutes.",
-  "when30OfThe": "When 30% of the trading volume belongs to the hedged positions established within 5 minutes.",
-  "whenClientIsUsing": "When client is using one trading account to manipulate mutli-computers and undergo high-volume trading, in order to create a mass trading illusion by misleading information.",
-  "whenCustomersAreTackling": "When customers are tackling software vulnerabilities to trade with the aid of third-party software (referred as the \"plug-in software\"). (please contact our online customer service staff if you need to use EAs or algo trading.)",
-  "aTradeOfUtilizing": "A trade of utilizing the internet or computers to conduct \"quote delay\", and repeatedly \"intentionally\" or \"maliciously\" trading in and out of the market with \"heavy lots\" within five minutes, that takes profit from trading platform rather than from the market in a short period of time.",
-  "whenTheNumber": "When the number of trading lots suspected to increase in a very short period of time, for example, the trading volume changes from 0.1- 0.5 to 5 - 10 in an instant.",
-  "handlingMethod": "Handling method",
-  "ifTheAccount": "If the account is confirmed to be trading with abnormal transactions, the company will freeze the account immediately, all deposits and withdrawals will be prohibited until investigation is done.",
-  "ifTheAccountIs": "If the account is confirmed to be with abnormal transactions, the company will close the account and return the remaining funds to the customer, any profits and commissions arising from abnormal transactions will be canceled.",
-  "theRightToInterpret": "The right to interpret “abnormal transaction” is owned by WCG Markets Ltd. and if there is any dispute, WCG Markets Ltd reserves the right to modify.",
-  "tradeDetails": "Trade Details",
-  "sourceOfTradeExecution": "Source Of Trade Execution",
-  "theQuotesOfOur": "The quotes of our products generally come from a number of the world's top Banks that offer us substantial and most timely prices for the market. We firmly believe that this approach will always provide you with the best available price.",
-  "slippage": "Slippage",
-  "ourCompanyWill": "Our company will try our best to reduce the occurrence of slippage and strives to provide a better trading model in the industry. However, sometimes the investment market is very volatile, and the prices sometimes change instantaneously which is really beyond human control.",
-  "marketGapAndFluctuations": "Market Gap And Fluctuations",
-  "whenEconomicData": "When economic data or important news are released, prices may gap up or down due to vicious market reactions. Under such circumstances, market conditions may be very unstable and prices may change dramatically in one direction. And in some cases, the market may not be able to offer available trades in short term. When the market reopens after weekends or holidays, market gaps often occur. Profit taking and stop loss orders may be executed at a price that is far from the specified price when market gap occurs. Such deviations may sometimes be favorable to the trader and sometimes not. Profit taking and stop loss orders may be executed out of the price range which the orders submitted. Orders may be executed in batches at different prices. The opening prices may be very different from the previous day's closing prices.",
-  "leverageAndMarginPolicy": "Leverage and margin policy",
-  "inAnyCase": "In any case, traders need to have sufficient margin to maintain open positions. WCG does not provide notice of margin call. For example, before weekends and holidays, when the margin level is less than 100% of the required margin, WCG has the right to respond to market fluctuations or according to the current situation. According to the needs of individual circumstances, all positions of the customer will be locked (hedged).",
-  "setTheValidityPeriodOfTheOrder": "Set the validity period of the order",
-  "allPendingOrders": "All pending orders and stop loss and profit settings are valid for one week. Before the weekend is closed, all pending orders and unexecuted stop loss or profit settings will be cancelled. If necessary, customers can reset the settings after the market opens on Monday.",
-  "forcedLiquidationPolicy": "Forced liquidation policy",
-  "pleaseNoteThatUnlessWeHaveOtherNotice": "Please note that unless we have other notice, the WCG liquidation margin level is 30%. When your margin ratio is less than 30%, the system will automatically close your order. Please always pay attention to the level of funds in the account to avoid unnecessary losses.",
-  "theCalculationMethod": "The calculation method of the margin ratio is: net value ÷ used advance payment = margin ratio"
+  "abnormalTrade": "تجارة غير طبيعية",
+  "whatIsAbnormalTrade": "ما هي التجارة غير الطبيعية?",
+  "abnormalTradeMeans": "تعني التجارة غير الطبيعية أن العملاء يجرون معاملات مكثفة في فترة زمنية قصيرة جداً. لتلخيص التجربة في هذا القطاع ، فإن التداول قصير الأجل ليس مفيداً للعميل حيث يتعين على العميل دفع مبلغ ضخم من رسوم المناولة للمعاملات المتكررة.في الوقت نفسه، يعد التداول قصير الأجل أيضاً طريقة استثمار غير مناسبة ، ولا يمكن للعملاء الحصول على أرباح كبيرة في هذه المعاملات المتكررة.بالإضافة إلى ذلك، هناك أيضًا مجرمون يعتزمون استخدام صفقات غير طبيعية لأغراض غسيل الأموال. نحن قلقون بشكل خاص بشأن هذه الأنشطة غير القانونية. أي فرصة لانتهاك لائحة \"مكافحة غسيل الأموال\" لصفقات غير طبيعية، فإن الشركة لن تتسامح!!",
+  "abnormalTradeTakesUp": "تستهلك التجارة غير الطبيعية الكثير من موارد الشبكة. علاوة على ذلك، سيؤثر على استقرار وكفاءة نظام التداول، وسيؤثر على تداول العملاء العاديين. من أجل حماية مصالح أغلبية العملاء، يجب على الشركة ألا تقبل الصفقات غير العادية..",
+  "theDefinitionOfAbnormalTrades": "تعريف التجارة غير الطبيعية",
+  "whenTheCustomerWithdrawsMoney": "عندما يسحب العميل الأموال، سنراجع سجل صفقات العميل من آخر عملية سحب (يبدأ السحب الأول من فتح الحساب) حتى هذا الوقت. وفقًا لحجم الصفقة ، عندما يكون 50٪ من حجم التداول في أمر التداول يستغرق وقتًا أقل من 5 دقائق ، فسنجري مزيدًا من المراجعة لهذا الحساب ، وقد يستمر وقت المراجعة لمدة 3 ساعات..",
+  "whenThereIs": "عندما يكون هناك 30٪ من حجم التداول يكون وقت الاحتفاظ أقل من دقائق.",
+  "when30OfThe": "عندما ينتمي 30٪ من حجم التداول إلى مراكز التحوط التي يتم إنشاؤها خلال 5 دقائق.",
+  "whenClientIsUsing": "عندما يستخدم العميل حساب تداول واحدًا للتلاعب بأجهزة الكمبيوترالمتعددة والخضوع لتداول كبير الحجم، من أجل خلق وهم تداولجماعي عن طريق معلومات مضللة.",
+  "whenCustomersAreTackling": "عندما يتعامل العملاء مع نقاط ضعف البرامج في التجارة بمساعدة برنامج طرف ثالث (يشار إليه باسم \"plug-in software\"). (يرجى الاتصال بموظفي خدمة العملاء عبر الإنترنت إذا كنت بحاجة إلى استخدام برامج التداول الآلي EAs)",
+  "aTradeOfUtilizing": "التجارة باستخدام الإنترنت أو أجهزة الكمبيوتر لإجراء (تأخير في عرض الأسعار)، والتداول المتكرر (عن قصد) أو (بشكل ضار) داخل وخارج السوق باستخدام (حصص ثقيلة) في غضون خمس دقائق، والتي تجني أرباحًا من منصة التداول بدلاً من السوق في فترة زمنية قصيرة.",
+  "whenTheNumber": "عندما يشتبه في زيادة عدد لوتات التداول في فترة زمنية قصيرة جداً،على سبيل المثال، يتغير حجم التداول من 0.1 - 0.5 إلى 5 - في لحظة.",
+  "handlingMethod": "طريقة المناولة",
+  "ifTheAccount": "الشركة بتجميد الحساب على الفور، وسيتم حظر جميع 1.عمليات الإيداع والسحب حتى يتم الانتهاء من إجراء التحقيق.",
+  "ifTheAccountIs": "إذا تم التأكد أن الحساب به صفقات غير طبيعية، ستقومالشركة بإغلاق الحساب وإعادة الأموال المتبقية إلى العميل،وسيتم إلغاء أي أرباح وعمولات ناتجة عن الصفقات غير الطبيعية.",
+  "theRightToInterpret": "حق تفسير \"الصفقة غير الطبيعية\" مملوك لشركة وفي حالة وجود أي نزاع WCG Ltd، يكون قرار شركة WCG نهائيًا.",
+  "tradeDetails": "تفاصيل التجارة",
+  "sourceOfTradeExecution": "مصدر تنفيذ التجارة",
+  "theQuotesOfOur": "تأتي أسعار منتجاتنا من الذهب والفضة عمومًا من عدد من أفضل البنوك في العالم والتي تقدم لنا أسعارأً حقيقية وفورية لسوق المعادن الثمينة. نعتقد اعتقادًا راسخًا أن هذا النهج سيوفر لك دائمًا أفضل سعر متاح..",
+  "slippage": "الانزلاق",
+  "ourCompanyWill": "ستبذل شركتنا قصارى جهدها لتقليل حدوث الانزلاق السعري وتسعى جاهدة لتوفير نموذج تداول أفضل في هذا القطاع. ومع ذلك في بعض الأحيان يكون سوق الاستثمار متقلبًا للغاية، وتتغير الأسعار أحيانًا بشكل فوري وهو أمر خارج عن إرادتنا حقًا..",
+  "marketGapAndFluctuations": "فجوة وتقلبات السوق",
+  "whenEconomicData": "عندما يتم إصدار بيانات اقتصادية أو أخبار مهمة، فقد ترتفع الأسعار أو تنخفض بسبب ردود الفعل الشرسة في السوق. في ظل هذه الظروف، قد تكون ظروف السوق غير مستقرة للغاية وقد تتغير الأسعار بشكل كبير في اتجاه واحد. وفي بعض الحالات قد لا يتمكن السوق من تقديم صفقات متاحة على المدى القصير. عند إعادة فتح السوق بعد عطلات نهاية الأسبوع أو العطلات، غالبًا ما تحدث فجوات في السوق. يمكن تنفيذ أوامر جني الأرباح ووقف الخسارة بسعر بعيد عن السعر المحدد عند حدوث فجوة في السوق. قد تكون هذه الانحرافات في بعض الأحيان مواتية للمتداول وأحيانًا لا تكون كذلك. يمكن تنفيذ أوامر جني الأرباح ووقف الخسارة خارج النطاق السعري الذي قدمته الطلبات. يمكن تنفيذ الأوامرعلى دفعات بأسعار مختلفة وقد تختلف أسعار الافتتاح كثيراً عن أسعار إغلاق اليوم السابق.",
+  "leverageAndMarginPolicy": "سياسة الرافعة المالية والهامش",
+  "inAnyCase": "في أي حال ، يحتاج المتداولون إلى هامش كافٍ للحفاظ على المراكز المفتوحة. لا تقدم WCG إشعارًا باستدعاء الهامش. على سبيل المثال ، قبل عطلات نهاية الأسبوع والعطلات ، عندما يكون مستوى الهامش أقل من 100٪ من الهامش المطلوب ، يحق لـ WCG الاستجابة لتقلبات السوق أو وفقًا للوضع الحالي. وفقًا لاحتياجات الظروف الفردية ، سيتم إغلاق جميع مراكز العميل (التحوط).",
+  "setTheValidityPeriodOfTheOrder": "حدد فترة صلاحية الطلب",
+  "allPendingOrders": "جميع الأوامر المعلقة وإعدادات وقف الخسارة والربح صالحة لمدة أسبوع واحد. قبل إغلاق عطلة نهاية الأسبوع ، سيتم إلغاء جميع الأوامر المعلقة وإعدادات وقف الخسارة أو الربح غير المنفذة. إذا لزم الأمر ، يمكن للعملاء إعادة تعيين الإعدادات بعد فتح السوق يوم الاثنين.",
+  "forcedLiquidationPolicy": "سياسة التصفية القسرية",
+  "pleaseNoteThatUnlessWeHaveOtherNotice": "يرجى ملاحظة أنه ما لم يكن لدينا إشعار آخر ، فإن مستوى هامش تصفية WCG هو 30٪. عندما تكون نسبة الهامش لديك أقل من 30٪ ، يقوم النظام تلقائيًا بإغلاق طلبك. يرجى الانتباه دائمًا إلى مستوى الأموال في الحساب لتجنب الخسائر غير الضرورية.",
+  "theCalculationMethod": "طريقة حساب نسبة الهامش هي: القيمة الصافية ÷ الدفعة المقدمة المستخدمة = نسبة الهامش"
 }
