--- a/src/i18n/locales/ar/products.json
+++ b/src/i18n/locales/ar/products.json
@@ -1,22 +1,22 @@
 {
-  "tradingTime": "Trading time is GMT+3 platform time (summer time), most products will be postponed for 1 hour after entering winter time. For specific trading hours, it is recommended that customers follow the actual announcement on the platform.",
-  "mainForex": "Main Foreign Exchange",
-  "secondaryForex": "Secondary Foreign Exchange",
-  "preciousMetals": "Precious Metals",
-  "crudeOil": "Crude Oil",
-  "index": "Index",
-  "uSShareCFD": "US Share CFD",
-  "cryptocurrencies": "Cryptocurrencies",
-  "product": "Product",
-  "name": "Name",
-  "lotRange": "Lot Range (Min/Max)",
-  "contractUnit": "Contract Unit",
-  "standardPoint": "Per standard point",
-  "leverage": "Leverage Proportion",
-  "basicMargin": "Basic Margin",
-  "marginCloseout": "Margin Closeout",
-  "openingTime": "Opening Time (Mon)",
-  "closingTime": "Closing Time (Fri)",
+  "tradingTime": "وقت التداول هو توقيت المنصة GMT + 3 (توقيت الصيف) ، سيتم تأجيل معظم المنتجات لمدة ساعة واحدة بعد دخول فصل الشتاء. بالنسبة لساعات التداول المحددة ، يوصى بأن يتبع العملاء الإعلان الفعلي على المنصة.",
+  "mainForex": "العملات الأجنبية الرئيسية",
+  "secondaryForex": "الصرف الأجنبي الثانوي",
+  "preciousMetals": "معادن قيمة",
+  "crudeOil": "زيت خام",
+  "index": "فهرس",
+  "uSShareCFD": "CFD على الأسهم الأمريكية",
+  "cryptocurrencies": "العملات الرقمية",
+  "product": "منتج",
+  "name": "اسم",
+  "lotRange": "نطاق اللوت (الحد الأدنى / الأقصى)",
+  "contractUnit": "وحدة العقد",
+  "standardPoint": "لكل نقطة قياسية",
+  "leverage": "نسبة الرافعة المالية",
+  "basicMargin": "الهامش الأساسي",
+  "marginCloseout": "إغلاق الهامش",
+  "openingTime": "وقت الافتتاح (الاثنين)",
+  "closingTime": "وقت الإغلاق (الجمعة)",
   "ounce": "ounce",
   "barrels": "barrels",
   "share": "share",
@@ -66,14 +66,14 @@
   "NZDJPY": "NZD/JPY",
   "A50": "A50(CFD)",
   "HKG33": "HKG33(CFD)",
-  "SPX500": "S&P 500(CFD)",
-  "US30": "US30(CFD)",
-  "NAS100": "Nasdaq 100(CFD)",
-  "UK100": "FTSE 100(CFD)",
-  "JPN225": "Nikkei 225(CFD)",
+  "SPX500": "مؤشر US S&P 500 (SPX500)",
+  "US30": "مؤشر داو جونز الأمريكي (US30)",
+  "NAS100": "مؤشر ناسداك (NASDAQ)",
+  "UK100": "مؤشر المملكة المتحدة FTSE 100 (UK100)",
+  "JPN225": "مؤشر نيكاي (JPN225)",
   "ESP35": "IBEX 35(CFD)",
-  "AUS200": "S&P/ASX 200(CFD)",
-  "EU50": "Euro Stoxx 50(CFD)",
-  "FRA40": "FRA40(CFD)",
-  "GER30": "GER30(CFD)"
+  "AUS200": "مؤشر أستراليا (AUS200) ASX 200",
+  "EU50": "مؤشر Stoxx 50 الأوروبي (ESTX50)",
+  "FRA40": "مؤشر CAC 40 الفرنسي (FRA40)",
+  "GER30": "مؤشر داكس الألماني (GER30)"
 }
