--- a/src/i18n/locales/en/platform.json
+++ b/src/i18n/locales/en/platform.json
@@ -31,7 +31,7 @@
   "MT4IsTheMostPopularForeign": "MT4 is the most popular foreign exchange trading platform in the world",
   "itHasWonVariousAwards": "It has won various awards. The platform has 3 different chart types, 9 time periods, 39 languages",
   "moreThan50Preset": "more than 50 preset technical indicators, and a fully customizable interface",
-  "aNumberOfTradingProducts": "Anumberoftradingproductscanbetraded",
+  "aNumberOfTradingProducts": "A number of trading products can be traded",
   "compatibleWithExpertAdvisors": "Compatible with Expert Advisors (smart automatic trading programs), custom indicators and other application tools",
   "itHasAMobileVersion": "It has a mobile version of the trading platform. You can use the mobile APP to trade and manage orders anytime, anywhere.",
   "provideAnAdvanced": "Provide an advanced notification signal system",
