--- a/src/i18n/locales/ar/marketNews.json
+++ b/src/i18n/locales/ar/marketNews.json
@@ -1,12 +1,12 @@
 {
-  "economicCalendar": "Economic calendar about foreign exchange market and world news, published daily and weekly",
-  "weeklyForeignExchangeNews": "Weekly foreign exchange news from WCG and comprehensive world economic indicators",
-  "financialCalendar": "Financial Calendar",
-  "financialNews": "Financial News",
-  "marketAnalysis": "Market Analysis",
-  "todaysEconomic": "Today's economic news",
-  "theMostImportant": "The most important economic and financial news related to the international currency and stocks market",
-  "theLatestReview": "The latest review of market analysis and news",
-  "theLatestReviewsAndForecasts": "The latest reviews and forecasts of all market tools and economic news. These materials are provided by professional analysts and are not used for direct guidance.",
-  "more": "More"
+  "economicCalendar": "يتم نشر التقويم الاقتصادي حول سوق الصرف الأجنبي وأخبار العالم يومياً وأسبوعياً",
+  "weeklyForeignExchangeNews": "أخبار العملات الأجنبية الأسبوعية من WCG والمؤشرات الاقتصادية العالمية الشاملة",
+  "financialCalendar": "التقويم المالي",
+  "financialNews": "الأخبار المالية",
+  "marketAnalysis": "تحليل السوق",
+  "todaysEconomic": "أخبار اليوم الاقتصادية",
+  "theMostImportant": "أهم الأخبار الاقتصادية والمالية المتعلقة بسوق العملات والأسهم العالمية",
+  "theLatestReview": "أحدث مراجعة لتحليلات وأخبار السوق",
+  "theLatestReviewsAndForecasts": "أحدث المراجعات والتوقعات لجميع أدوات السوق والأخبار الاقتصادية. هذه المواد يتم توفيرها بواسطة محترفين ولا يتم استخدامها للإرشاد المباشر..",
+  "more": "تحميل المزيد"
 }
