--- a/src/i18n/locales/zh/conditions.json
+++ b/src/i18n/locales/zh/conditions.json
@@ -1,14 +1,14 @@
 {
   "privacyPolicy": "隱私條款",
   "theCustomers": "客戶的個人資料按實際情況和需要會被用作以下用途：",
-  "theVerificationProcedures": "執行客戶指示或回复客戶有關的查詢的核證程序、賬戶的日常行政管理或相關投資產品或服務的直接或間接市場推廣，與WCG的聯屬或關連公司就相關投資或交易服務共享、反覆查證及轉移該等個人資料",
-  "dealWithCustomers": "處理客戶抵押品，或向追收客戶欠款",
-  "transferSuchPersonalData": "將該等個人資料轉移予第三者服務供應商作信貸查證及／或核證數據用途",
-  "toProvideAny": "關於或有關遵守任何法律、規例、法令或監管機構的命令的任何用途而提供任何該等數據",
+  "theVerificationProcedures": "執行客戶指示或回复客戶有關的查詢的核證程序、賬戶的日常行政管理或相關投資產品或服務的直接或間接市場推廣，與WCG的聯屬或關連公司就相關投資或交易服務共享、反覆查證及轉移該等個人資料。",
+  "dealWithCustomers": "處理客戶抵押品，或向追收客戶欠款。",
+  "transferSuchPersonalData": "將該等個人資料轉移予第三者服務供應商作信貸查證及／或核證數據用途。",
+  "toProvideAny": "關於或有關遵守任何法律、規例、法令或監管機構的命令的任何用途而提供任何該等數據。",
   "WCGWillKeep": "WCG會把客戶的個人資料保密，但按實際情況和需要可能提供給下列機構／人士：",
-  "WCGOtherCompanies": "WCG其他公司包括全資擁有的附屬公司或附屬公司的聯營公司或集團屬下的董事、職員等名義的全資或部份擁有的公司",
-  "agentsAndThirdPartyService": "為客戶處理相關業務的代理人及第三方服務供應商包括：結算所、專業服務公司、金融機構、電腦系統服務商、電訊系統支持服務，作為完成客戶服務的必要手續",
-  "anyRegulatoryOrGovernmentAgency": "有關或監管WCG任何業務的任何監管或政府機構",
+  "WCGOtherCompanies": "WCG其他公司包括全資擁有的附屬公司或附屬公司的聯營公司或集團屬下的董事、職員等名義的全資或部份擁有的公司。",
+  "agentsAndThirdPartyService": "為客戶處理相關業務的代理人及第三方服務供應商包括：結算所、專業服務公司、金融機構、電腦系統服務商、電訊系統支持服務，作為完成客戶服務的必要手續。",
+  "anyRegulatoryOrGovernmentAgency": "有關或監管WCG任何業務的任何監管或政府機構。",
   "personsDeemedAppropriate": "根據保密責任WCG視為適當或合適的人士，包括集團的成員公司及其僱員。這些授權人士必須把客戶的個人資料保密。",
   "AccordingTo": "根據條例中的條款，客戶均有權要求WCG更正有關客戶的任何不實數據及以書面方式要求我們終止使用其個人資料作直接或間接市場推廣用途。唯WCG有權就處理根據條例中的條款而提出索取或更正數據的要求而收取合理的費用。",
   "conditions": "條件細則",
